--- a/package.json
+++ b/package.json
@@ -11,12 +11,12 @@
   "dependencies": {
     "lucide-react": "^0.454.0",
     "next": "15.2.4",
+    "next-themes": "^0.4.6",
     "react": "^19",
     "react-dom": "^19",
     "react-router-dom": "latest",
     "tailwind-merge": "^2.5.5",
     "tailwindcss-animate": "^1.0.7"
-
   },
   "devDependencies": {
     "@types/node": "^22",
