Added form for getting mail data

--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "deploy": "gh-pages -d out"
   },
   "dependencies": {
+    "@formspree/react": "^3.0.0",
     "lucide-react": "^0.454.0",
     "next": "15.2.4",
     "react": "^19",
